tests/paczka2/big_fuzzy/44952717.err
Error in line 23: CmTxKz A793 -1,3
Error in line 28: CmTxKz A7g3 8g,1
Error in line 32: 1q07GQrw8fL S491 73,6
Error in line 33: HBZcQcXOj S57 16,9
Error in line 25: S111 A793 15,9
Error in line 48: 8oH S57 186,65
Error in line 40: ujzHTMnkT S111 64,8
Error in line 49: 1q07GQrw8fL A793 28,0
Error in line 43: 8oH S57 55,5
Error in line 58: CmTxKz S57 5,8
Error in line 63: CmTxKz A793 17,9
Error in line 72: S111 S111 88,8
Error in line 74: 8oH A793 38,4
Error in line 76: 8oH S57 79,4
Error in line 89: 8oH S491 15,4
Error in line 79: ujzHTMnkT S491 10,1
Error in line 100: ujzHTMnkT A793 -1,9
Error in line 90: HBZcQcXOj S491 73,9
Error in line 98: ujzHTMnkT A793 9,6
Error in line 102: CmTxKz A793 19,7
Error in line 111: RNGr9sT S111 0,3
Error in line 123: ujzHTMnkT S57 83,7
Error in line 128: 8oH S491 89,4
Error in line 129: 8oH S57 2,2
Error in line 136: HBZcQcXOj S111 87,2
Error in line 142: HBZcQcXOj A793 1,4
Error in line 154: ujzHTMnkT A793 87,6
Error in line 178: RNGr9sT A793 29,6
Error in line 176: ujzHTMnkT S491 97,4
Error in line 187: 8oH S111 74,0
Error in line 191: CmTxKz S491 56,3
Error in line 210: RNGr9sT S111 -8,7
Error in line 213: CmTxKz A793 90,6
Error in line 230: HBZcQcXOj S491 70,8
Error in line 237: 1q07GQrw8fL S57 75,6
Error in line 245: CmTxKz S111 81,1
